<resources>
    <string name="app_name">android2ProjectNew</string>
    <string name="filter">filter</string>

    <string-array name="jobList">
        <item name="quality_assurance">Quality Assurance</item>
        <item name="marketing">Marketing</item>
        <item name="laboratory_director">Laboratory Director</item>
        <item name="Biologist">Biologist</item>
        <item name="electrical_engineer">Electrical Engineer</item>
        <item name="electronics_engineer">Electronics Engineer</item>
        <item name="mechanical_engineer">Mechanical Engineer</item>
        <item name="software_engineer">Software Engineer</item>
        <item name="c_cpp">C/C++ Developer</item>
        <item name="net">NET Developer</item>
        <item name="java">JAVA developer</item>
        <item name="android">ANDROID Developer</item>
        <item name="cs">CS Developer</item>
        <item name="python">Python Developer</item>
        <item name="algo">algorithm Developer</item>
        <item name="devops">Devops</item>
        <item name="team_leader">Team Leader</item>
        <item name="qa">QA</item>
        <item name="production_worker">Production Worker</item>
    </string-array>
    <string-array name="jobStructure">
        <item name="full_time_job">Full Time Job</item>
        <item name="half_time_job">Half Time Job</item>
        <item name="temporary">Temporary</item>
    </string-array>
    <string name="hello">hello</string>
    <string name="chats">Active chats</string>
    <string name="userName">User Name</string>
    <string name="myAnswer">My Answer:</string>
    <string name="theAnswer">The Answer</string>
    <string name="datePlaceHolder">00\\00\\00</string>
    <string name="headline">Headline</string>
    <string name="interview_date">Interview Date</string>
    <string name="Information_about_the_process">Information about the process</string>
    <string name="information">Information</string>
    <string name="question_from_the_interview">Question from the interview</string>
    <string name="question">The Question</string>
    <string name="likes">Likes</string>
    <string name="like">like</string>
    <string name="answers">Answers</string>
    <string name="answer">Answer</string>
    <string name="enter_answer">Enter Your Answer..</string>
    <string name="add_your_opinion">Add Your Opinion</string>
    <string name="work_between_the_years">Work between the Year\'s</string>
    <string name="from">From-</string>
    <string name="to">To-</string>
    <string name="type_job_name">Type Job title</string>
    <string name="summary_sentence_on_the_company">Summary sentence on the company</string>
    <string name="advantage">Advantage</string>
    <string name="disadvantage">Disadvantages</string>
    <string name="send">Send</string>
    <string name="tell_us_some_more_about_the_company">Tell us some more about the company..</string>
    <string name="you_need_to_reg">You need to register for chat</string>
    <string name="create_acc">Create Account</string>
    <string name="no_image_selected">No Image Selected</string>
    <string name="permission_denied">Permission Denied</string>
    <string name="auth_failed">Authentication Failed..</string>
    <string name="please_add_work_place">Please Select Compny Name</string>
    <string name="please_enter_pass">Enter Password</string>
    <string name="enter_email">Enter Email</string>
    <string name="enter_username">Enter User Name</string>
    <string name="pass_not_match">Password Don\'t match, Please Try Again</string>
    <string name="ok">Ok</string>
    <string name="enter_mail_long">Please Enter Email Address and press forgot password again</string>
    <string name="invalid_email">"Invalid Email, Please Try Again "</string>
    <string name="scope_of_position">Scope Of Position</string>
    <string name="choose">Choose</string>
    <string name="avg_salary">Average Gross Salary Per Month</string>
    <string name="years_of_exp">Years of experience</string>
    <string name="years">Years</string>
    <string name="reg_for_profile">You Need To Register To View Profile</string>
    <string name="notification">Posts Notifications</string>
    <string name="notif_delete">Notification Deleted</string>
    <string name="share_your_salary">Share Your Salary!</string>
    <string name="type_a_message">Type a message...</string>
    <string name="create_account">Create New Account</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="already_have_an_account">Already have an account? Log in</string>
    <string name="edit_your_profile_details">Edit Your Profile Details</string>
    <string name="change_your_user_name">Change Your User Name:</string>
    <string name="edit">Edit</string>
    <string name="enter_job_descreption">Enter job Descreption:</string>
    <string name="edit_your_company_name">Edit Your company name</string>
    <string name="forgot_your_password">Forgot Your Password?</string>
    <string name="Login">Login</string>
    <string name="or">OR</string>
    <string name="continue_as_guest">Continue as guest</string>
    <string name="edit_your_profile">Edit Your Profile</string>

    <string name="chat_with_me">Chat with me</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="email_address">Email Address</string>
    <string name="job_description">Job Description</string>
    <string name="work_at">Work at</string>
    <string name="add_interview_questions">Add interview questions!</string>
    <string name="choose_a_date">Choose a date</string>
    <string name="general_details">General details about the process</string>
    <string name="professional_questions">Professional questions from the interview</string>
    <string name="possible_answers">Possible answer</string>
    <string name="add">Add</string>
    <string name="company_name">Company Name</string>
    <string name="work_between">Work between</string>
    <string name="add_answer">Add Answer</string>
    <string name="salary_num">Salary</string>
    <string name="last_message">Last Message</string>
    <string name="opinion">Opinions</string>
    <string name="interview_questions">Interview Questions</string>
    <string name="reg_for_chat">You Need To Register To Use Chats</string>
    <string name="pass_send_succesful">Password Send To Your Email Successfully</string>
    <string name="auth_faile_lease">Authentication Failed, Please Try Again</string>
    <string name="illegal_pass">Invalid password, Use 6 or more characters with a mix of letters numbers</string>
    <string name="short_description">Short Description</string>
    <string name="Articles">Intersting Articles</string>
    <string name="my_profile">My Profile</string>
    <string name="intresting_articles">Intresting Articles</string>
    <string name="log_out">Log Out</string>
    <string name="account">Account</string>
    <string name="search">Search</string>
    <string name="interview_for_a">Interview for a</string>
    <string name="at">\nat</string>
    <string name="liked_your_post">Liked Your Post</string>
    <string name="likes_space">" likes"</string>
    <string name="cancel">Cancel</string>
    <string name="sort_by_distance">Sort by  jobs that close to me</string>
    <string name="sort_by_time_posted">Sort by time posted</string>
    <string name="done">Done</string>
    <string name="choose_item">Choose Item</string>
    <string name="import_from_gallary">From Gallary</string>
    <string name="import_from_camera">From Camera</string>
    <string name="pick_image_from">Pick Image From:</string>
    <string name="uploading">Uploading</string>
    <string name="this_field_can_not_be_blank">This field can not be blank</string>
    <string name="search_work_place">Search Work Place</string>
    <string name="reg_for_add">You Need To Register To Add New Items</string>
</resources>