<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardUseCompatPadding="true"
    app:contentPadding="5dp"
    app:cardCornerRadius="8dp"
    android:paddingBottom="10dp"
    android:paddingLeft="10dp"
    android:paddingRight="10dp"
    android:paddingTop="10dp"
    android:clickable="true"
    android:focusable="true"
    android:foreground="?android:attr/selectableItemBackground"
    android:id="@+id/card_view_layout"
    >


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp"
        android:background="#fff"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:id="@+id/profile_layout_s"
            >

            <de.hdodenhof.circleimageview.CircleImageView
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_marginEnd="20dp"
                android:src="@mipmap/ic_launcher"
                android:id="@+id/img_salary"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:textSize="20sp"
                    android:textColor="@color/black"
                    android:clickable="true"
                    android:text="@string/userName"
                    android:id="@+id/username_salary_tv"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/datePlaceHolder"
                    android:gravity="start"
                    android:layout_marginTop="5dp"
                    android:textAllCaps="true"
                    android:id="@+id/date_salary"
                    android:textColor="@android:color/darker_gray"
                    android:textSize="14sp"
                    android:textStyle="bold"/>
            </LinearLayout>


        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/company_name"
            android:layout_marginStart="15dp"
            android:layout_marginTop="10dp"
            android:textAllCaps="true"
            android:id="@+id/companyJobDescriptionCell"
            android:textColor="@color/colorPrimary"
            android:textSize="15sp"
            android:textStyle="bold"/>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/headline"
            android:visibility="gone"
            android:layout_marginStart="15dp"
            android:layout_marginTop="10dp"
            android:textAllCaps="true"
            android:id="@+id/tv_headline"
            android:textColor="@color/colorPrimary"
            android:textSize="18sp"
            android:textStyle="bold"/>


        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="10dp"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:background="@android:color/darker_gray" />


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="10dp"
            android:layout_marginStart="15dp"
            >

            <TextView
                android:id="@+id/workTimeTvCell"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/work_between_the_years"
                android:layout_marginEnd="20dp"
                android:textColor="#000"/>

            <TextView
                android:id="@+id/jobFromYearCell"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/from"
                android:layout_marginEnd="20dp"
                android:textColor="#000"/>

            <TextView
                android:id="@+id/kav"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="-"
                android:layout_marginEnd="20dp"
                android:textColor="#000"/>

            <TextView
                android:id="@+id/jobToYearCell"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/to"
                android:layout_marginEnd="20dp"
                android:textColor="#000"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="10dp"
            android:layout_marginStart="15dp"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/job_description"
                android:layout_marginEnd="20dp"
                android:textColor="#000"
                android:id="@+id/jobTvCell"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/job_description"
                android:layout_marginEnd="20dp"
                android:textColor="@android:color/darker_gray"
                android:id="@+id/jobDescriptionCell"/>


        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="10dp"
            android:layout_marginStart="15dp"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/scope_of_position"
                android:id="@+id/jobStructureTvCell"
                android:layout_marginEnd="20dp"
                android:textColor="#000"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/scope_of_position"
                android:id="@+id/structureDescriptionCell"/>


        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="10dp"
            android:layout_marginStart="15dp"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/avg_salary"
                android:id="@+id/grossSalaryTvCell"
                android:layout_marginEnd="20dp"
                android:textColor="#000"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/salary_num"
                android:id="@+id/salaryDescriptionCell"/>


        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="10dp"
            android:layout_marginStart="15dp"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/years_of_exp"
                android:id="@+id/jobSeniorityTvCell"
                android:layout_marginEnd="20dp"
                android:textColor="#000"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/years"
                android:id="@+id/seniorityDescriptionCell"/>


        </LinearLayout>


    </LinearLayout>

</androidx.cardview.widget.CardView>