<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardUseCompatPadding="true"
    app:contentPadding="5dp"
    app:cardCornerRadius="8dp"
    android:paddingBottom="10dp"
    android:paddingLeft="10dp"
    android:paddingRight="10dp"
    android:paddingTop="10dp"
    android:clickable="true"
    android:focusable="true"

    android:foreground="?android:attr/selectableItemBackground"
    android:id="@+id/card_view_layout"
    >


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp"
        android:background="#fff"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            >

            <de.hdodenhof.circleimageview.CircleImageView
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_marginEnd="20dp"
                android:src="@mipmap/ic_launcher"
                android:id="@+id/img_opinion"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:textSize="20sp"
                    android:clickable="true"
                    android:textColor="@color/black"
                    android:text="@string/userName"
                    android:id="@+id/username_opinion_tv"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/datePlaceHolder"
                    android:gravity="start"
                    android:layout_marginTop="5dp"
                    android:textAllCaps="true"
                    android:id="@+id/tv_time"
                    android:textColor="@android:color/darker_gray"
                    android:textSize="14sp"
                    android:textStyle="bold"/>
            </LinearLayout>


        </LinearLayout>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/headline"
            android:layout_marginStart="15dp"
            android:layout_marginTop="10dp"
            android:textAllCaps="true"
            android:id="@+id/tv_headline"
            android:textColor="@color/colorPrimary"
            android:textSize="18sp"
            android:textStyle="bold"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/company_name"
                android:layout_marginStart="15dp"
                android:layout_marginTop="10dp"
                android:textAllCaps="true"
                android:id="@+id/tv_company_name1"
                android:textColor="@color/colorPrimary"
                android:textSize="15sp"
                android:textStyle="bold"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/company_name"
                android:layout_marginStart="15dp"
                android:layout_marginTop="10dp"
                android:id="@+id/tv_company_name"
                android:textColor="#9C9C9C"
                android:textSize="15sp"
                android:textStyle="bold"/>
        </LinearLayout>





<!--

        <RatingBar
            android:id="@+id/rating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="10dp"
            style="@style/Widget.AppCompat.RatingBar.Small"
            android:saveEnabled="true"
            android:numStars="5"
            />
-->


        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="10dp"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:background="@android:color/darker_gray" />


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="10dp"
            android:layout_marginStart="15dp"
            >

            <TextView
                android:id="@+id/tv_work_between"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/work_between_the_years"
                android:layout_marginEnd="20dp"
                android:textColor="#000"/>

            <TextView
                android:id="@+id/year1_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/from"
                android:layout_marginEnd="20dp"
                android:textColor="#000"/>

            <TextView
                android:id="@+id/kav"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="-"
                android:layout_marginEnd="20dp"
                android:textColor="#000"/>

            <TextView
                android:id="@+id/year2_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/to"
                android:layout_marginEnd="20dp"
                android:textColor="#000"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="10dp"
            android:layout_marginStart="15dp"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/job_description"
                android:layout_marginEnd="20dp"
                android:textColor="#000"
                android:id="@+id/on_duty_tv"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/job_description"
                android:layout_marginEnd="20dp"
                android:id="@+id/job_title_tv"/>


        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="10dp"
            android:layout_marginStart="15dp"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/advantage"
                android:id="@+id/tv_pros"
                android:layout_marginEnd="20dp"
                android:textColor="#000"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/advantage"
                android:id="@+id/pros_tv_opinion"/>


        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="10dp"
            android:layout_marginStart="15dp"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/disadvantage"
                android:id="@+id/tv_cons"
                android:layout_marginEnd="20dp"
                android:textColor="#000"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/disadvantage"
                android:id="@+id/cons_tv_opinion"/>


        </LinearLayout>


    </LinearLayout>

</androidx.cardview.widget.CardView>