<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="1dp"
    app:cardUseCompatPadding="true"
    app:contentPadding="5dp"
    app:cardCornerRadius="8dp"
    android:paddingBottom="10dp"
    android:paddingLeft="10dp"
    android:paddingRight="10dp"
    android:paddingTop="10dp"
    android:clickable="true"
    android:focusable="true"
    android:padding="10dp"
    android:foreground="?android:attr/selectableItemBackground"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        >
        <de.hdodenhof.circleimageview.CircleImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:id="@+id/image_card_notif"
            android:layout_marginEnd="5dp"
            android:src="@mipmap/ic_launcher"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="5dp"
            android:layout_marginStart="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/nameTv_notif"
                    android:textColor="@color/black"
                    android:text="@string/userName"
                    android:textSize="16sp"
                    android:textStyle="bold"/>



            </LinearLayout>


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/notif"
                android:text="@string/notification"
                android:textColor="@color/black"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/datePlaceHolder"
                android:id="@+id/time_notif"
                android:gravity="left"
                tools:ignore="RtlHardcoded" />




        </LinearLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>